--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "hatchling.build"
 name = "scrambledConvolution"
 version = "0.0.1"
 dependencies = [
-    "numpy=1.23.5",
+    "numpy>=1.21",
     "numba>=0.59.1"
 ]
 authors = [{name="Till Vogt", email="till_vogt@gmx.net"}]
